añadidos cambios y mejoras UI/UX
